fix: improve contrast ratio of primary colour

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -33,7 +33,7 @@ $typography-config: (
   /**
    * Root properties, typically colour declarations, but contains other things too.
    */
-  --color-primary:          #00a6ed;
+  --color-primary:          #2673e4;
   --color-secondary:        #bf1ca9;
   --color-positive:         #5ad42f;
   --color-negative:         #d4372f;
